2009-08-23  Ulrich Drepper  <drepper@redhat.com>

	* locale/locale.h: Include xlocale.h and the thread-local locale
	declarations for XPG7, not XPG6.

2009-08-21  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/powerpc/powerpc32/____longjmp_chk.S: Removed.
	* sysdeps/powerpc/powerpc64/____longjmp_chk.S: Removed.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/____longjmp_chk.S: New file.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/____longjmp_chk.S: New file.
	* sysdeps/powerpc/powerpc32/__longjmp-common.S: Move CHECK_SP earlier.
	* sysdeps/powerpc/powerpc32/fpu/__longjmp-common.S: Likewise.

2009-08-20  Roland McGrath  <roland@redhat.com>

	* sysdeps/generic/elf/backtracesyms.c (__backtrace_symbols):
	Use l_addr instead of l_map_start (dli_fbase).
	Print "FILE([+-]OFFSET) [ADDRESS]" with the file-relative
	address when there is no proximate symbol.
	* sysdeps/generic/elf/backtracesymsfd.c (__backtrace_symbols_fd):
	Likewise.

2009-08-16  Ulrich Drepper  <drepper@redhat.com>

	* scripts/gen-as-const.awk: Fix test for 64-bit platform.

2009-08-14  Ulrich Drepper  <drepper@redhat.com>

	* test-skeleton.c (signal_handler): Renamed from timeout_handler.
	Also handle SIGINT.  In that case only do the cleanup and then
	re-raise the signal.
	(main): Install handler for SIGINT.

2009-08-10  SUGIOKA Toshinobu  <sugioka@itonet.co.jp>

	* stdlib/longlong.h [__sh__] (udiv_qrnnd, sub_ddmmss): Add "t" to
	clobber list.

2009-08-01  H.J. Lu  <hongjiu.lu@intel.com>

	* elf/Makefile (distribute): Add tst-audit6.c tst-auditmod6a.c
	tst-auditmod6b.c tst-auditmod6c.c tst-audit7.c tst-auditmod7a.c
	tst-auditmod7b.c.
	(tests): Add tst-audit6 tst-audit7.
	(modules-names): Add st-auditmod6a tst-auditmod6b tst-auditmod6c
	tst-auditmod7a tst-auditmod7b.
	($(objpfx)tst-audit6): New.
	($(objpfx)tst-audit6.out): Likewise.
	($(objpfx)tst-audit7): Likewise.
	($(objpfx)tst-audit7.out): Likewise.
	(tst-audit6-ENV): Likewise.
	(tst-audit7-ENV): Likewise.
	(CFLAGS-tst-auditmod6b.c): Likewise.